[package]
name = "tdns-cli"
description = "DNS update client (RFC 2136)"
categories = ["command-line-utilities", "network-programming"]
keywords = ["dns", "update", "dynamic", "nsupdate"]
repository = "https://github.com/rotty/tdns-cli"
homepage = "https://github.com/rotty/tdns-cli"
readme = "README.md"
version = "0.0.5"
authors = ["Andreas Rottmann <mail@r0tty.org>"]
license = "GPL-3.0-or-later"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
async-trait = "0.1.57"
trust-dns-client = { version = "0.23.2", features = ["dnssec-ring"] }
trust-dns-resolver = "0.23.2"
structopt = "0.3.1"
futures = "0.3.1"
anyhow = "1.0"
tokio = { version = "1.2.0", features = ["full"] }
rand = "0.8.3"
digest = "0.10.1"
hmac = "0.12.0"
sha2 = "0.10.1"
once_cell = "1.2.0"
data-encoding = "2.1.2"
chrono = "0.4.9"
